<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background"
tools:context=".tela2">

<EditText
    android:id="@+id/textName"
    android:layout_width="307dp"
    android:layout_height="56dp"
    android:layout_marginTop="24dp"
    android:backgroundTint="#0B0707"
    android:ems="10"
    android:hint="@string/full_name"
    android:inputType="textPersonName"
    android:textColorHint="#837F7F"
    app:layout_constraintEnd_toEndOf="@+id/imageView"
    app:layout_constraintStart_toStartOf="@+id/imageView"
    app:layout_constraintTop_toBottomOf="@+id/imageView" />

<EditText
    android:id="@+id/textNumberRG"
    android:layout_width="312dp"
    android:layout_height="54dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="#0B0707"
    android:ems="10"
    android:hint="@string/national_identication_number"
    android:inputType="number"
    android:textColorHint="#837F7F"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/textDateNas"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="@+id/textDateNas"
    app:layout_constraintTop_toBottomOf="@+id/textName"
    app:layout_constraintVertical_bias="0.211" />

<EditText
    android:id="@+id/textDateNas"
    android:layout_width="312dp"
    android:layout_height="58dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="#0B0707"
    android:ems="10"
    android:hint="@string/data_of_birth"
    android:inputType="date"
    android:textColorHint="#837F7F"
    app:layout_constraintBottom_toTopOf="@+id/textNumberRG"
    app:layout_constraintEnd_toEndOf="@+id/textName"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/textName"
    app:layout_constraintTop_toBottomOf="@+id/textName"
    app:layout_constraintVertical_bias="0.371" />

<EditText
    android:id="@+id/editTextPhone"
    android:layout_width="312dp"
    android:layout_height="55dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="#0B0707"
    android:ems="10"
    android:hint="@string/phone"
    android:inputType="phone"
    android:textColorHint="#837F7F"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/textNumberRG"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/textNumberRG"
    app:layout_constraintTop_toBottomOf="@+id/textNumberRG"
    app:layout_constraintVertical_bias="0.067" />

<CheckBox
    android:id="@+id/checkBox3"
    android:layout_width="135dp"
    android:layout_height="48dp"
    android:layout_marginTop="8dp"
    android:text="@string/feminine"
    android:textColor="#837F7F"
    android:textColorHint="#837F7F"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/textView"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/textView"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="0.087" />

<CheckBox
    android:id="@+id/checkBox4"
    android:layout_width="145dp"
    android:layout_height="48dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:text="@string/masculine"
    android:textColor="#837F7F"
    android:textColorHint="#837F7F"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
    app:layout_constraintHorizontal_bias="0.91"
    app:layout_constraintStart_toStartOf="@+id/editTextPhone"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="0.092" />

<TextView
    android:id="@+id/textView"
    android:layout_width="142dp"
    android:layout_height="42dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:text="@string/sex"
    android:textColor="#837F7F"
    android:textColorHint="#837F7F"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/editTextPhone"
    app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
    app:layout_constraintVertical_bias="0.104" />

<Button
    android:id="@+id/buttonEnv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/send"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/checkBox4"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintStart_toStartOf="@+id/textView"
    app:layout_constraintTop_toBottomOf="@+id/checkBox3"
    app:layout_constraintVertical_bias="0.586"
    tools:text="Send" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="158dp"
    android:layout_height="141dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.56"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.046" />
</androidx.constraintlayout.widget.ConstraintLayout>
